--- a/src/Form.css
+++ b/src/Form.css
@@ -4,7 +4,7 @@
 }
 
 .Button {
-  background-color: burlywood;
+  background-color: #b31b06;
   color: white;
   border: none;
   border-radius: 40px;
