--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: url(./images/photo-1547756536-cde3673fa2e5.webp);
 }
 
 fieldset {
